Add cross-platform codegen

--- a/conformance/base/manifests.yaml
+++ b/conformance/base/manifests.yaml
@@ -540,6 +540,7 @@ spec:
     spec:
       containers:
       - name: grpc-infra-backend-v1
+	# TODO: Migate to gcr.io/k8s-staging-gateway-api once possible
         image: us-docker.pkg.dev/grpc-testing/testing-images-public/gateway-api/grpcechoserver:alpha3
         env:
         - name: POD_NAME
@@ -586,6 +587,7 @@ spec:
     spec:
       containers:
       - name: grpc-infra-backend-v2
+	# TODO: Migate to gcr.io/k8s-staging-gateway-api once possible
         image: us-docker.pkg.dev/grpc-testing/testing-images-public/gateway-api/grpcechoserver:alpha3
         env:
         - name: POD_NAME
@@ -632,6 +634,7 @@ spec:
     spec:
       containers:
       - name: grpc-infra-backend-v3
+	# TODO: Migate to gcr.io/k8s-staging-gateway-api once possible
         image: us-docker.pkg.dev/grpc-testing/testing-images-public/gateway-api/grpcechoserver:alpha3
         env:
         - name: POD_NAME
