add SAN minItems

--- a/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
@@ -785,6 +785,7 @@ spec:
                                 Support: Core
                               items:
                                 type: string
+                              minItems: 1
                               type: array
                           required:
                           - caCertificateRefs
@@ -1983,6 +1984,7 @@ spec:
                                 Support: Core
                               items:
                                 type: string
+                              minItems: 1
                               type: array
                           required:
                           - caCertificateRefs
