--- a/geps/gep-713/metadata.yaml
+++ b/geps/gep-713/metadata.yaml
@@ -6,3 +6,14 @@ status: Experimental
 authors:
   - youngnick
   - kflynn
+relationships:
+  extendedBy:
+  - name: Direct Policy Attachment
+    number: 2648
+    description: Split out Direct Policy Attachment
+  - name: Inherited Policy Attachment
+    number: 2649
+    description: Split out Inherited Policy Attachment
+references:
+  - "https://github.com/kubernetes-sigs/gateway-api/issues/611"
+  - "https://docs.google.com/document/d/13fyptUtO9NV_ZAgkoJlfukcBf2PVGhsKWG37yLkppJo/edit?resourcekey=0-Urhtj9gBkGBkSL1gHgbWKw"
