--- a/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
@@ -700,13 +700,14 @@ spec:
                                 as a trust anchor to validate the certificates presented by the client.
 
 
-                                A single CA certificate reference to a Kubernetes ConfigMap kind has "Core" support.
+                                A single CA certificate reference to a Kubernetes ConfigMap or Secret kind
+                                has "Core" support.
                                 Implementations MAY choose to support attaching multiple CA certificates to
                                 a Listener, but this behavior is implementation-specific.
 
 
-                                Support: Core - An optional single reference to a Kubernetes Secret and ConfigMap,
-                                with the CA certificate in a key named `ca.crt`.
+                                Support: Core - An optional single reference to a single Kubernetes Secret
+                                and to a single Kubernetes ConfigMap with the CA certificate in a key named `ca.crt`.
 
 
                                 Support: Implementation-specific (More than one reference, or other kinds
@@ -1899,13 +1900,14 @@ spec:
                                 as a trust anchor to validate the certificates presented by the client.
 
 
-                                A single CA certificate reference to a Kubernetes ConfigMap kind has "Core" support.
+                                A single CA certificate reference to a Kubernetes ConfigMap or Secret kind
+                                has "Core" support.
                                 Implementations MAY choose to support attaching multiple CA certificates to
                                 a Listener, but this behavior is implementation-specific.
 
 
-                                Support: Core - An optional single reference to a Kubernetes Secret and ConfigMap,
-                                with the CA certificate in a key named `ca.crt`.
+                                Support: Core - An optional single reference to a single Kubernetes Secret
+                                and to a single Kubernetes ConfigMap with the CA certificate in a key named `ca.crt`.
 
 
                                 Support: Implementation-specific (More than one reference, or other kinds
