--- a/geps/gep-1619/metadata.yaml
+++ b/geps/gep-1619/metadata.yaml
@@ -7,3 +7,14 @@ authors:
   - gcs278
   - sjberman
   - robscott
+relationships:
+  seeAlso:
+    - number: 713
+      name: Metaresources and Policy Attachment
+      description: Defines metaresource and policy attachment API
+changelog:
+  - "https://github.com/kubernetes-sigs/gateway-api/pull/1643"
+  - "https://github.com/kubernetes-sigs/gateway-api/pull/1889"
+  - "https://github.com/kubernetes-sigs/gateway-api/pull/1935"
+  - "https://github.com/kubernetes-sigs/gateway-api/pull/2159"
+  - "https://github.com/kubernetes-sigs/gateway-api/pull/2634"
