Promote GEP-957 to standard channel

--- a/config/crd/experimental/gateway.networking.k8s.io_backendtlspolicies.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_backendtlspolicies.yaml
@@ -387,7 +387,7 @@ spec:
                           pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?$
                           type: string
                         port:
-                          description: |+
+                          description: |-
                             Port is the network port this Route targets. It can be interpreted
                             differently based on the type of parent resource.
 
@@ -423,8 +423,6 @@ spec:
 
 
                             Support: Extended
-
-
                           format: int32
                           maximum: 65535
                           minimum: 1
