HTTPBackendRef RequestMirror Conformance
I dropped path logic in filter so we can re-use the same test for the backend

--- a/conformance/tests/httproute-request-mirror-backend.yaml
+++ b/conformance/tests/httproute-request-mirror-backend.yaml
@@ -7,14 +7,14 @@ spec:
   parentRefs:
   - name: same-namespace
   rules:
-  - filters:
-    - type: RequestMirror
-      requestMirror:
-        backendRef:
-          name: infra-backend-v2
-          namespace: gateway-conformance-infra
-          port: 8080
-    backendRefs:
+  - backendRefs:
     - name: infra-backend-v1
-      port: 8080
       namespace: gateway-conformance-infra
+      port: 8080
+      filters:
+      - type: RequestMirror
+        requestMirror:
+          backendRef:
+            name: infra-backend-v2
+            namespace: gateway-conformance-infra
+            port: 8080
