--- a/geps/gep-2649/metadata.yaml
+++ b/geps/gep-2649/metadata.yaml
@@ -3,14 +3,10 @@ kind: GEPDetails
 number: 2649
 name: Inherited Policy Attachment
 status: Experimental
-# Any authors who contribute to the GEP in any way should be listed here using
-# their Github handle.
 authors:
   - youngnick
+  - robscott
 relationships:
-  # extends indicates that a GEP extends the linkned GEP, adding more detail
-  # or additional implementation. The extended GEP MUST have its extendedBy
-  # field set back to this GEP.
   extends:
     - name: Metaresources and Policy Attachment
       number: 713
@@ -18,9 +14,7 @@ relationships:
 # references is a list of hyperlinks to relevant external references.
 # It's intended to be used for storing Github discussions, Google docs, etc.
 references: {}
-# featureNames is a list of the feature names introduced by the GEP, if there
-# are any. This will allow us to track which feature was introduced by which GEP.
-featureNames: {}
 # changelog is a list of hyperlinks to PRs that make changes to the GEP, in
 # ascending date order.
-changelog: {}
+changelog:
+  - "https://github.com/kubernetes-sigs/gateway-api/pull/2813"
