--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,6 +127,8 @@ nav:
       - geps/gep-1911/index.md
       - geps/gep-2162/index.md
       - geps/gep-2257/index.md
+      - geps/gep-2648/index.md
+      - geps/gep-2649/index.md
     - Standard:
       - geps/gep-709/index.md
       - geps/gep-718/index.md
