--- a/config/crd/standard/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_gateways.yaml
@@ -333,20 +333,19 @@ spec:
                         Support: Core
                       properties:
                         kinds:
-                          description: |-
-                            Kinds specifies the groups and kinds of Routes that are allowed to bind
-                            to this Gateway Listener. When unspecified or empty, the kinds of Routes
-                            selected are determined using the Listener protocol.
-
-
-                            A RouteGroupKind MUST correspond to kinds of Routes that are compatible
-                            with the application protocol specified in the Listener's Protocol field.
-                            If an implementation does not support or recognize this resource type, it
-                            MUST set the "ResolvedRefs" condition to False for this Listener with the
-                            "InvalidRouteKinds" reason.
-
-
-                            Support: Core
+                          description: "Kinds specifies the groups and kinds of Routes
+                            that are allowed to bind\nto this Gateway Listener. When
+                            unspecified or empty, the kinds of Routes\nselected are
+                            determined using the Listener protocol.\n\n\nA RouteGroupKind
+                            MUST correspond to kinds of Routes that are compatible\nwith
+                            the application protocol specified in the Listener's Protocol
+                            field.\nIf an implementation does not support or recognize
+                            this resource type, it\nMUST set the \"ResolvedRefs\"
+                            condition to False for this Listener with the\n\"InvalidRouteKinds\"
+                            reason.\n\n\nSupport: Core\n\n\nThe following list states
+                            the Route kinds compatible for each protocolType\n\n\nHTTP:
+                            HTTPRoutes, GRPCRoutes\nHTTPS: HTTPRoutes, GRPCRoutes,
+                            TLSRoute\nTLS: TLSRoutes, TCPRoutes\nTCP: TCPRoutes\nUDP:\tUDPRoutes"
                           items:
                             description: RouteGroupKind indicates the group and kind
                               of a Route resource.
@@ -1366,20 +1365,19 @@ spec:
                         Support: Core
                       properties:
                         kinds:
-                          description: |-
-                            Kinds specifies the groups and kinds of Routes that are allowed to bind
-                            to this Gateway Listener. When unspecified or empty, the kinds of Routes
-                            selected are determined using the Listener protocol.
-
-
-                            A RouteGroupKind MUST correspond to kinds of Routes that are compatible
-                            with the application protocol specified in the Listener's Protocol field.
-                            If an implementation does not support or recognize this resource type, it
-                            MUST set the "ResolvedRefs" condition to False for this Listener with the
-                            "InvalidRouteKinds" reason.
-
-
-                            Support: Core
+                          description: "Kinds specifies the groups and kinds of Routes
+                            that are allowed to bind\nto this Gateway Listener. When
+                            unspecified or empty, the kinds of Routes\nselected are
+                            determined using the Listener protocol.\n\n\nA RouteGroupKind
+                            MUST correspond to kinds of Routes that are compatible\nwith
+                            the application protocol specified in the Listener's Protocol
+                            field.\nIf an implementation does not support or recognize
+                            this resource type, it\nMUST set the \"ResolvedRefs\"
+                            condition to False for this Listener with the\n\"InvalidRouteKinds\"
+                            reason.\n\n\nSupport: Core\n\n\nThe following list states
+                            the Route kinds compatible for each protocolType\n\n\nHTTP:
+                            HTTPRoutes, GRPCRoutes\nHTTPS: HTTPRoutes, GRPCRoutes,
+                            TLSRoute\nTLS: TLSRoutes, TCPRoutes\nTCP: TCPRoutes\nUDP:\tUDPRoutes"
                           items:
                             description: RouteGroupKind indicates the group and kind
                               of a Route resource.
