--- a/geps/gep-995/metadata.yaml
+++ b/geps/gep-995/metadata.yaml
@@ -7,3 +7,13 @@ authors:
   - guicassolato
 changelog:
   - "https://github.com/kubernetes-sigs/gateway-api/pull/2593"
+relationships:
+  seeAlso:
+    - number: 2648
+      name: Direct Policy Attachment
+      description: Defines a way to attach direct policies to sections of a route.
+    - number: 2649
+      name: Inherited Policy Attachment
+      description: |
+        Provides a more assertive way to report status regarding sections of a route.
+        E.g.: when a policy that targets a Service affects rules of a route.
