GEP-1619: Update timeouts to use Duration
Update AbsoluteTimeoutSeconds and IdleTimeoutSeconds to use the standard
Duration field from GEP-2257. Rename them to AbsoluteTimeout and
IdleTimeout to reflect this change.

--- a/geps/gep-1619/metadata.yaml
+++ b/geps/gep-1619/metadata.yaml
@@ -12,6 +12,9 @@ relationships:
     - number: 713
       name: Metaresources and Policy Attachment
       description: Defines metaresource and policy attachment API
+    - number: 2257
+      name: Gateway API Duration Format
+      description: Defines the Duration API field
 changelog:
   - "https://github.com/kubernetes-sigs/gateway-api/pull/1643"
   - "https://github.com/kubernetes-sigs/gateway-api/pull/1889"
