--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,50 @@
-Click==8.1.7
+Babel==2.14.0
+beautifulsoup4==4.12.3
+bracex==2.4
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+EditorConfig==0.12.4
+ghp-import==2.1.0
 htmlmin==0.1.12
+idna==3.6
 Jinja2==3.1.3
+jsbeautifier==1.15.1
 jsmin==3.0.1
 livereload==2.6.3
-# mkdocs 2.4.1 requires Markdown < 3.4.0
-# https://github.com/kubernetes-sigs/gateway-api/pull/1671#issuecomment-1400586465
-markdown~=3.2
+Markdown==3.6
 MarkupSafe==2.1.5
+mergedeep==1.3.4
 mkdocs==1.5.3
 mkdocs-awesome-pages-plugin==2.9.2
 mkdocs-macros-plugin==1.0.5
 mkdocs-material==9.5.13
 mkdocs-material-extensions==1.3.1
-mkdocs-redirects==1.2.1
 mkdocs-mermaid2-plugin==1.1.1
+mkdocs-redirects==1.2.1
+natsort==8.4.0
+numpy==1.26.4
+packaging==24.0
+paginate==0.5.6
+pandas==2.2.1
+pathspec==0.12.1
 pep562==1.1
+platformdirs==4.2.0
 Pygments==2.17.2
 pymdown-extensions==10.7
+python-dateutil==2.9.0.post0
+pytz==2024.1
 PyYAML==6.0.1
+pyyaml_env_tag==0.1
+regex==2023.12.25
+requests==2.31.0
 six==1.16.0
+soupsieve==2.5
+tabulate==0.9.0
+termcolor==2.4.0
 tornado==6.4
+tzdata==2024.1
+urllib3==2.2.1
+watchdog==4.0.0
+wcmatch==8.5.1
