--- a/examples/experimental/destination-port-matching-tcp.yaml
+++ b/examples/experimental/destination-port-matching-tcp.yaml
@@ -1,5 +1,5 @@
-apiVersion: gateway.networking.k8s.io/v1alpha2
-kind: TCPRoute
+apiVersion: gateway.networking.x-k8s.io/v1alpha2
+kind: XTCPRoute
 metadata:
   name: destination-port-matching-example
 spec:
