--- a/examples/experimental/http-route-timeouts/timeout-example.yaml
+++ b/examples/experimental/http-route-timeouts/timeout-example.yaml
@@ -1,5 +1,5 @@
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
+apiVersion: gateway.networking.x-k8s.io/v1
+kind: XHTTPRoute
 metadata:
   name: timeout-example
 spec:
