--- a/examples/experimental/v1alpha2/backendtlspolicy-system-certs.yaml
+++ b/examples/experimental/v1alpha2/backendtlspolicy-system-certs.yaml
@@ -1,6 +1,6 @@
 #$ Used in:
 #$ - site-src/guides/tls.md
-apiVersion: gateway.networking.k8s.io/v1alpha2
+apiVersion: gateway.networking.x-k8s.io/v1alpha2
 kind: BackendTLSPolicy
 metadata:
   name: tls-upstream-dev
