--- a/examples/experimental/v1alpha2/grpc-routing/bar-grpcroute.yaml
+++ b/examples/experimental/v1alpha2/grpc-routing/bar-grpcroute.yaml
@@ -1,7 +1,7 @@
 #$ Used in:
 #$ - site-src/guides/grpc-routing.md
-apiVersion: gateway.networking.k8s.io/v1alpha2
-kind: GRPCRoute
+apiVersion: gateway.networking.x-k8s.io/v1alpha2
+kind: XGRPCRoute
 metadata:
   name: bar-route
 spec:
