--- a/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
@@ -404,7 +404,7 @@ spec:
                             the Route kinds compatible for each protocolType\nfor
                             route kinds and protocolTypes included in Gateway API\n\n\nHTTP:
                             HTTPRoutes, GRPCRoutes\nHTTPS: HTTPRoutes, GRPCRoutes,
-                            TLSRoute\nTLS: TLSRoutes, TCPRoutes\nTCP: TCPRoutes\nUDP:\tUDPRoutes"
+                            TLSRoutes\nTLS: TLSRoutes, TCPRoutes\nTCP: TCPRoutes\nUDP:\tUDPRoutes"
                           items:
                             description: RouteGroupKind indicates the group and kind
                               of a Route resource.
@@ -1495,7 +1495,7 @@ spec:
                             the Route kinds compatible for each protocolType\nfor
                             route kinds and protocolTypes included in Gateway API\n\n\nHTTP:
                             HTTPRoutes, GRPCRoutes\nHTTPS: HTTPRoutes, GRPCRoutes,
-                            TLSRoute\nTLS: TLSRoutes, TCPRoutes\nTCP: TCPRoutes\nUDP:\tUDPRoutes"
+                            TLSRoutes\nTLS: TLSRoutes, TCPRoutes\nTCP: TCPRoutes\nUDP:\tUDPRoutes"
                           items:
                             description: RouteGroupKind indicates the group and kind
                               of a Route resource.
