--- a/geps/gep-2648/metadata.yaml
+++ b/geps/gep-2648/metadata.yaml
@@ -2,7 +2,7 @@ apiVersion: internal.gateway.networking.k8s.io/v1alpha1
 kind: GEPDetails
 number: 2648
 name: Direct Policy Attachment
-status: Experimental
+status: Provisional
 # Any authors who contribute to the GEP in any way should be listed here using
 # their Github handle.
 authors:
@@ -15,7 +15,8 @@ relationships:
       description: Split out Direct Policy Attachment into its own GEP
 # references is a list of hyperlinks to relevant external references.
 # It's intended to be used for storing Github discussions, Google docs, etc.
-references: {}
+references:
+  - "https://github.com/kubernetes-sigs/gateway-api/discussions/2927"
 # changelog is a list of hyperlinks to PRs that make changes to the GEP, in
 # ascending date order.
 changelog:
