--- a/geps/gep-2649/metadata.yaml
+++ b/geps/gep-2649/metadata.yaml
@@ -2,7 +2,7 @@ apiVersion: internal.gateway.networking.k8s.io/v1alpha1
 kind: GEPDetails
 number: 2649
 name: Inherited Policy Attachment
-status: Experimental
+status: Provisional
 authors:
   - youngnick
   - robscott
@@ -13,7 +13,8 @@ relationships:
       description: Split out Inherited Policy Attachment
 # references is a list of hyperlinks to relevant external references.
 # It's intended to be used for storing Github discussions, Google docs, etc.
-references: {}
+references:
+  - "https://github.com/kubernetes-sigs/gateway-api/discussions/2927"
 # changelog is a list of hyperlinks to PRs that make changes to the GEP, in
 # ascending date order.
 changelog:
