GEP-1619: Add CEL for absoluteTimeout requirement
Add CEL to ensure absoluteTimeout is set when cookie lifetimeType is
Permanent.

--- a/config/crd/experimental/gateway.networking.k8s.io_backendlbpolicies.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_backendlbpolicies.yaml
@@ -144,6 +144,11 @@ spec:
                     - Header
                     type: string
                 type: object
+                x-kubernetes-validations:
+                - message: AbsoluteTimeout must be specified when cookie lifetimeType
+                    is Permanent
+                  rule: '!has(self.cookieConfig.lifetimeType) || self.cookieConfig.lifetimeType
+                    != ''Permanent'' || has(self.absoluteTimeout)'
               targetRef:
                 description: |-
                   TargetRef identifies an API object to apply policy to.
